fix clipping + add image

--- a/PortofolioWebsite/wwwroot/css/site.css
+++ b/PortofolioWebsite/wwwroot/css/site.css
@@ -139,20 +139,20 @@ body {
 
 .skills-grid {
     justify-content: center;
-    gap: 20px;
+    gap: 15px;
     flex-wrap: wrap;
     width: 100%;
     max-width: 1200px;
 }
 
 .skill-card {
-    width: 150px;
-    padding: 20px;
+    width: auto;
     background-color: #2b3e5e;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
     transition: transform 0.3s ease;
     color: #f0f0f0;
+    word-wrap: break-word;
 }
 
     .skill-card img {
@@ -171,11 +171,11 @@ body {
 }
 
 .project-container {
-    padding: 20px;
+    padding: 30px;
     background-color: #2b3e5e;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    max-width: 1000px;
+    max-width: 1200px;
     width: 100%;
     margin: 1% auto;
 }
@@ -233,7 +233,7 @@ body {
 }
 
 .skill-card {
-    width: 100px;
+    width: 150px;
     padding: 15px;
     background-color: #2b3e5e;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
